2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c (balance): Don't core dump if DUMPCYLE is too
	  big.

2004-09-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: New -o option, doesn't overwrite amanda
	  tape without -o.
	* man/amtapetype.8.in: Document new -o option.

2004-09-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Works with failed dump to tape.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/sendbackup-gnutar.c (end_backup): Write warning message
	  in not fatal error.
	* server-src/dumper.c (process_dumpline): Parse warning message.
	* server-src/reporter.c (handle_strange): Print warning message in
	  the STRANGE summary.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driverio.c (free_serial): Set stable[s].dp to NULL.
	* server-src/driverio.c (disk2serial): Check that stable[s].dp == NULL.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Joe Rhett <jrhett@isite.net>

	* common-src/alloc.c (safe_env): Keep SYSTEMROOT if __CYGWIN__.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Orion Poplawski <orion@cora.nwra.com>

	* server-src/conffile.c (copy_dumptype): Copy maxpromoteday.

2004-08-12  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/selfcheck.c (check_disk): More check for CALCSIZE.

2004-08-11  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/amfeatures.h (fe_selfcheck_calcsize): New feature.
	* common-src/amfeatures.c (am_init_feature_set): Set
	  fe_selfcheck_calcsize.
	* client-src/selfcheck.c: Check if calcsize binary is available if
	  it is needed.
	* server-src/amcheck.c (start_host): Call selfcheck with CALCSIZE
	  if it support fe_selfcheck_calcsize.

2004-08-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* man/amanda.8.in: Document 'estimate' dumptype option.
